fix nav links align left

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -178,6 +178,10 @@ h1,h2,h3 {
   }
 }
 
+.logo-and-navs {
+  display: flex;
+}
+
 .donate-and-socials {
   display: flex;
 }
